@@ -1,3 +1,10 @@
+2002-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* graph.test: 
+	* graph.man:
+	* graph.tcl: Implemented FR 603924. getall, keys, keyexists
+	  methods for keys of the whole graph.
+
 2002-08-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* tree.test: Followup to fix for bug SF #587533. Had to update the
